Add RW Store Credit Balance to Account Page

--- a/rewardify-snippets/cart-page-redemption-block.html
+++ b/rewardify-snippets/cart-page-redemption-block.html
@@ -22,7 +22,7 @@
     console.log("header exists...");
     console.log(header);
     if (header[0]) {
-      if (header[0].innerText == "NET-30 TERM CHECKOUT CART") {
+      if (header[0].innerText == "NET 30 TERMS CHECKOUT") {
         console.log("ON PRIVILEGED CHECKOUT");
         rwCartBlock.style.display = "none";
         if (rfd.style != undefined) {
@@ -33,6 +33,7 @@
       }
     }
   }
+
   // var askStoreCredit = document.getElementById("ask-store-credit-or-terms");
   // console.log(askStoreCredit);
   // console.log(rfd);
@@ -46,3 +47,6 @@
   //   askStoreCredit.style.display = "none";
   // }
 </script>
+
+
+
