--- a/rewardify-snippets/priviliged-checkout-cart-page-button-block.html
+++ b/rewardify-snippets/priviliged-checkout-cart-page-button-block.html
@@ -11,3 +11,22 @@
     extraBtn[0].style.display = "none"
   }
 </script>
+
+
+
+
+
+<br>
+<button type="submit" name="rewardify-privileged-checkout" class="btn checkout rewardify-privileged-checkout">Net-30 Checkout
+</button>
+<!-- ========================================================= -->
+<!-- ========================================================= -->
+<!-- ========================================================= -->
+<script>
+  console.log('Privileged Checkout Should Appear');
+  var checkoutBtnArray = document.getElementsByClassName("checkout");
+  if (checkoutBtnArray.length > 1) {
+    var extraBtn = document.getElementsByClassName("rewardify-privileged-checkout");
+    extraBtn[0].style.display = "none"
+  }
+</script>
